--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ h4, h5, h6, p {
 
 .containerone h4 {
     display: block;
-    /*margin-left: 230px;*/
+    /*margin-left: 230px; this might not be needed */
     margin-bottom: 250px;
     font-size: 40px;
     text-align: center;
@@ -213,7 +213,7 @@ h4, h5, h6, p {
 .containertwo div p {
     display: block;
     margin-bottom: 10px;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .containertwo div h6:hover {
