--- a/style.css
+++ b/style.css
@@ -140,9 +140,10 @@ h4, h5, h6, p {
 }
 
 .containerone p {
+    display: block;
     margin-top: 60px;
-    margin-left: 330px;
-    padding-left: 300px;
+    /*margin-left: 330px;*/
+    /*padding-left: 300px;*/
     padding-right: 230px;
     font-size: 15px;
     text-align: left;
