--- a/style.css
+++ b/style.css
@@ -115,6 +115,11 @@ h4, h5, h6, p {
     margin-top: 100px;
 }
 
+.containerone div {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
 .containerone img:first-child {
     width: 300px;
     height: 300px;
