--- a/style.css
+++ b/style.css
@@ -117,9 +117,10 @@ h4, h5, h6, p {
 
 .containerone div {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 16px;
 }
+
 .containerone img:first-child {
     width: 300px;
     height: 300px;
