--- a/style.css
+++ b/style.css
@@ -138,8 +138,8 @@ h4, h5, h6, p {
 }
 
 .containerone h4 {
-    display: block;
-    /*margin-left: 230px; this might not be needed */
+    /*display: block; 
+    margin-left: 230px; this might not be needed */
     margin-bottom: 250px;
     font-size: 40px;
     text-align: center;
