--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ h4, h5, h6, p {
 .nav h3 a {
     color: black;
 }
+/*This is where container one begins*/
 
 .containerone {
     display: flex;
@@ -113,12 +114,6 @@ h4, h5, h6, p {
     justify-content: space-evenly;
     align-items: center;
     margin-top: 100px;
-}
-
-.containerone div {
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
 }
 
 .containerone img:first-child {
@@ -154,6 +149,7 @@ h4, h5, h6, p {
     font-size: 15px;
     text-align: left;
 }
+/*This is a break from container one*/
 
 .containertwo, .containerthree, .containerfour {
     display: flex;
