--- a/style.css
+++ b/style.css
@@ -133,15 +133,15 @@ h4, h5, h6, p {
 }
 
 .containerone h4 {
-    /*display: block; 
-    margin-left: 230px; this might not be needed */
+    display: block; 
+    /*margin-left: 230px; this might not be needed */
     margin-bottom: 250px;
     font-size: 40px;
     text-align: center;
 }
 
 .containerone p {
-    /*display: block;*/
+    position: absolute;
     margin-top: 60px;
     /*margin-left: 330px;*/
     /*padding-left: 300px;*/
