--- a/style.css
+++ b/style.css
@@ -108,13 +108,10 @@ h4, h5, h6, p {
 }
 /*This is where container one begins*/
 
-/*.containerone {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+.containerone {
     margin-top: 100px;
-}*/
+    margin-left: 100px;
+}
 
 .containerone img:first-child {
     width: 300px;
