--- a/style.css
+++ b/style.css
@@ -109,8 +109,11 @@ h4, h5, h6, p {
 /*This is where container one begins*/
 
 .containerone {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
     margin-top: 100px;
-    margin-left: 100px;
 }
 
 .containerone img:first-child {
