--- a/style.css
+++ b/style.css
@@ -139,13 +139,13 @@ h4, h5, h6, p {
     position: absolute;
     font-size: 40px;
     text-align: center;
-    margin-top: -100px;
+    margin-bottom: 100px;
     margin-left: 40px;
 }
 
 .containerone p {
     position: absolute;
-    padding-left: 300px;
+    padding-left: 500px;
     padding-right: 300px;
     font-size: 15px;
     text-align: left;
