--- a/style.css
+++ b/style.css
@@ -139,8 +139,8 @@ h4, h5, h6, p {
     position: absolute;
     font-size: 40px;
     text-align: center;
-    margin-bottom: 100px;
-    margin-left: 40px;
+    margin-top: -300px;
+    margin-left: 80px;
 }
 
 .containerone p {
@@ -149,7 +149,8 @@ h4, h5, h6, p {
     padding-right: 500px;
     font-size: 15px;
     text-align: left;
-    margin-left: 40px;
+    margin-left: 90px;
+    margin-top: 40px;
 }
 /*This is a break from container one*/
 
