--- a/style.css
+++ b/style.css
@@ -222,10 +222,18 @@ h4, h5, h6, p {
     font-size: 12px;
 }
 
-.containertwo div h6:hover, p:hover {
+.containertwo div h6:hover {
     background-color: #7a678591;
     font-size: 15px;
     border-radius: 40px;
+    backdrop-filter: blur(5px); 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+}
+
+.containertwo div p:hover {
+    background-color: #7a678591;
+    font-size: 20px;
+    border-radius: 25px;
     backdrop-filter: blur(5px); 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
 }
