--- a/style.css
+++ b/style.css
@@ -172,8 +172,9 @@ header {
 .containertwo div {
     background: rgba(255, 255, 255, 0.592);
     width: 340px;
-    height: 400px;
-    margin-left: 100px;
+    height: 440px;
+    margin-left: 0;
+    margin-right: 0;
     border-radius: 40px;
     backdrop-filter: blur(10px); 
     z-index: 1;
