--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ footer {
         background-color: white;
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: center;
         align-items: center;
         gap: 50px;
         width: 100%;
