--- a/style.css
+++ b/style.css
@@ -16,61 +16,41 @@ h4, h5, h6, p {
 /*Styles for the header*/
 header {
     background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 0;
     width: 100%;
-    height: 120px; 
+    height: 200px; 
 }
 
-.leftside {
+.topside {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    gap: 0;
+    gap: 50px;
+    margin-left: -140px;
+    
 }
 
-.leftside h1 {
-    margin: 30px;
+.topside h1 {
+    font-size: 50px;
+    border-bottom: 1.5px solid black;
 }
 
-.leftside img {
-    width: 100px;
-    height: 100px;
-    margin-top: 10px;
-    margin-left: 20px;
+.topside img {
+    margin-top: 50px;
+    width: 120px;
+    height: 120px;
+    
 }
 
 .nav {
-    margin-top: 50px;
-    gap: 0;
+    gap: 35px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
+    justify-content: center;
+    align-items: center;
     text-align: center; 
     z-index: 2;
-}
-
-.menu {
-    overflow: hidden;
-    max-height: 25px;
-    transition: max-height 0s;
-}
-
-.nav .menu:hover {
-    max-height: 200px;
-    cursor: pointer;
-    overflow: visible;
-} 
-
-.nav ul {
-    margin: 0;
-    padding: 8px;
-    list-style: none;
-    text-align: left;  
+    margin-top: -20px;
 }
 
 .nav a {
@@ -79,78 +59,57 @@ header {
 }
 
 .nav h3 {
+    font-weight: normal;
     margin: 0; 
     padding: 0; 
-}
-
-.nav li {
-    margin-bottom: 20px;
-    padding: 5px;
-    transition: background-color 1s ease, color 1s ease; 
-    border: 0.5px dashed black;
-    border-radius: 10px;
-}
-
-.nav li a:hover {
-   color: white; 
-}
-
-.nav li:hover {
-    background-color: #40242B;
-}
-
-.nav h3 a {
-    color: black;
 }
 
 /*This concerns all containers*/
 .containerone, .containertwo, .containerthree, .containerfour {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     margin-top: 100px;
+    gap: 60px;
 }
 
 /*This is where container one begins*/
 /*This is profile photo*/
-.containerone img:first-child {
+.profile {
     width: 300px;
     height: 300px;
     border-radius: 50%;
     animation: pulse 4s infinite;
-    margin-left: 15px;
 }
 
-/*This is the cloud image*/
-.containerone img:first-child + img {
-    margin-left: 25px;
+.introduction {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url('Images/cloud.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 760px;
+    height: 395px;
 }
 
 .containerone h4 {
-    position: absolute;
     font-size: 40px;
-    text-align: center;
-    margin-top: -200px;
-    margin-left: 240px;
+    margin: 0;
 }
 
 .containerone p {
-    position: absolute;
-    padding-left: 500px;
-    padding-right: 200px;
     font-size: 15px;
     text-align: left;
-    margin-left: 140px;
-    margin-top: 40px;
+    padding: 0 50px 0 50px;
+   
 }
-.containerone > p + img {
-    position: absolute;
-    width: 120px;
-    height: 300px;
-    margin-left: 75%;
-    margin-top: 57%;
-    transform: rotate(-18deg);
+
+.wheel {
+    transform: translateY(50px);
+    transform: rotate(40deg);
 }
 
 /*This is where container two beginsT*/
