--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header {
 }
 
 /*This concerns all containers*/
-.containerone, .containertwo, .containerthree, .containerfour {
+.containerone, .containerthree, .containerfour {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -74,6 +74,12 @@ header {
     gap: 60px;
 }
 
+.containertwo {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
 /*This is where container one begins*/
 /*This is profile photo*/
 .profile {
@@ -114,24 +120,18 @@ header {
 
 /*This is where container two beginsT*/
 .two h2 {
-    position: absolute;
-    margin-top: 10%;
-    margin-left: -150px;
     transform: rotate(-90deg); /* Rotates the text */
-    transform-origin: left left; /* Adjusts rotation anchor point */
     font-size: 50px;
     z-index: 1;
     color: #40242B;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
     padding: 2px;
-    
+    margin-top: 170px;
 }
 
 /*This will be containertwo's carousel's css*/
 .carousel-container {
-    position: relative;
     max-width: 600px;
-    margin: auto;
     margin-top: 150px;
     overflow: hidden; /* Ensures only one card is visible at a time */
 }
@@ -150,10 +150,6 @@ header {
     border-radius: 8px;
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 .card h5 {
     font-size: 23px;
@@ -205,9 +201,8 @@ input[type="radio"]:checked + label {
     position: absolute;
     width: 120px;
     height: 300px;
-    margin-right: 71%;
-    margin-top: 23%;
-    transform: rotate(-50deg);
+    transform: rotate(-30deg);
+    margin-left: 30px;
 }
 
 /*This is the end of container 2 and the start of the monthly read*/
