--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header {
 }
 
 /*This concerns all containers*/
-.containerone, .containerthree, .containerfour {
+.containerone {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -79,6 +79,24 @@ header {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+}
+
+.containerthree {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    gap: 75px;
+}
+
+.containerfour{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    gap: 75px;
 }
 /*This is where container one begins*/
 /*This is profile photo*/
@@ -207,17 +225,12 @@ input[type="radio"]:checked + label {
 
 /*This is the end of container 2 and the start of the monthly read*/
 .three h2 {
-    position: absolute;
-    margin-top: -25px;
-    margin-left: -90px;
     transform: rotate(-90deg); /* Rotates the text */
-    transform-origin: left left; /* Adjusts rotation anchor point */
     font-size: 50px;
     z-index: 2;
     color: #40242B;
     background-color: #DCCDD1;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
-    padding: 2px;
 }
 
 .containerthree {
@@ -230,15 +243,6 @@ input[type="radio"]:checked + label {
     border-top: 2px solid whitesmoke;
     animation: pulse 6s infinite;
 }
-/*
-@keyframes pulse {
-    0%, 100% {
-        border-top: 5px solid #ff6347;
-    }
-    50% {
-        border-top: 10px solid #ff4500; /* Thicker and brighter at peak 
-    }
-} */
 
 @keyframes pulse {
     0%, 100% {
@@ -249,41 +253,33 @@ input[type="radio"]:checked + label {
     }
 }
 
-.containerthree div + div {
+.description {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: baseline;
+    justify-content: center;
+    align-items: center;
     text-align: left;
-    gap: 0px;
+    gap: 0;
+    width: 550px;
+    height: 500px;
 }
 
-.containerthree div + div h5 {
+.containerthree h5 {
     font-size: 28px;
     padding-bottom: 30px;
     margin: 0;
-    margin-left: 320px;
-    margin-right: 100px;
     text-align: center;
     color: black; /* Title text color */
-    text-shadow: 0 0 10px #dbb5bf, /* First glow */
-                 0 0 20px #dbb5bf, /* Slightly larger glow */
-                 0 0 30px #dbb5bf, /* More intense inner glow */
-                 0 0 40px #dbb5bf;
+    text-shadow: 0 0 10px #fcf8f9, /* First glow */
+                 0 0 20px #f5f0f1, /* Slightly larger glow */
+                 0 0 30px #ede3e6, /* More intense inner glow */
+                 0 0 40px #fffdfe;
 }
 
-.containerthree div + div p {
-    margin: 0;
-    margin-left: 320px;
-    margin-right: 100px;
+.containerthree p {
     font-size: 14px;
 }
 
-.containerthree img {
-    margin: 0;
-    margin-left: 300px;
-    
-}
 .containerthree img:hover {
     animation: wiggle 0.5s ease-in-out infinite;
 }
@@ -296,18 +292,16 @@ input[type="radio"]:checked + label {
     }
 }
 
+/*The beginning of containerfour*/
+
 .four h2 {
-    position: absolute;
-    margin-top: -75px;
-    margin-left: -220px;
     transform: rotate(-90deg); /* Rotates the text */
-    transform-origin: left left; /* Adjusts rotation anchor point */
     font-size: 50px;
     z-index: 2;
-    color: whitesmoke;
+    color: #40242B;
     background-color: #DCCDD1;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
-    padding: 2px;
+    margin-bottom: 100px;
 }
 
 .containerfour :first-child ~ div {
@@ -315,24 +309,19 @@ input[type="radio"]:checked + label {
     height: 300px;
     border-top-left-radius: 15%;
     border-bottom-right-radius: 15%;
-    background-color: white;
+    background-color: transparent;
     margin-bottom: 100px;
     transition: transform 0.3s ease;
 }
 
 .containerfour :first-child ~ div:hover {
-        transform: scale(1.4); /* Magnify the content by 10% on hover */
-}
-
-.containerfour :first-child + div {
-    display: flex;
-    justify-content: center; /* Horizontal alignment */
-    align-items: center;
+        transform: scale(1.2); /* Magnify the content by 10% on hover */
 }
 
 .containerfour img {
     width: 120px;
     height: 300px;
+    position: absolute;
 }
 
 .containerfour .four + div img {
@@ -361,13 +350,12 @@ footer {
         align-items: center;
         gap: 50px;
         width: 100%;
-        height: 120px; 
-      
+        height: 120px;  
 }
 
 .footer img {
-    width: 30px;
-    height: 30px;
+    width: 10px;
+    height: 10px;
 }
 
 #aboutpage .information {
