--- a/style.css
+++ b/style.css
@@ -65,46 +65,11 @@ nav h3 {
     padding: 0; 
 }
 
-.hamburger {
-    display: none;
-    flex-direction: column;
-    align-items: flex-end;
-    cursor: pointer;
-    gap: 5px;
-    z-index: 10;
-}
-
-.hamburger span {
-    display: block;
-    width: 30px;
-    height: 4px;
-    background: black;
-    border-radius: 5px;
-}
-
 @media (max-width: 768px) {
     .topside h1 {
-        display: none;
-    }
-    .hamburger {
-        display: flex;
+        font-size: 20px;
     }
 
-    .mobilemenu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 30px;
-        left: 0;
-        width: 100%;
-        background: white;
-        text-align: center;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .mobilemenu.active {
-        display: flex !important;
-    }
     .containerone, .containertwo, .containerthree, .containerfour {
         flex-direction: column !important;
     }
