--- a/style.css
+++ b/style.css
@@ -67,8 +67,9 @@ nav h3 {
 
 @media (max-width: 768px) {
     .topside h1 {
-        font-size: 20px;
+        font-size: 20px !important;
     }
+
 
     .containerone, .containertwo, .containerthree, .containerfour {
         flex-direction: column !important;
@@ -76,6 +77,7 @@ nav h3 {
 
     h2 {
         transform: rotate(0deg) !important;
+        font-size: 25px !important;
     }
 
     .wheel {
@@ -83,16 +85,16 @@ nav h3 {
     }
 
     .introduction {
-        width: 90vw !important; /* Takes up 90% of screen width */
-        max-width: 90% !important; /* Won’t exceed screen width */
+        width: 50vw !important; /* Takes up 90% of screen width */
+        max-width: 50% !important; /* Won’t exceed screen width */
         height: auto; 
     }
 
     .carousel-container {
         flex-direction: column; /* Stack carousels vertically*/
         margin-top: 20px !important;
-        margin-bottom: 200px;
-        max-width: 450px !important;
+        margin-bottom: 100px;
+        max-width: 350px !important;
     }
 
     .containerthree {
