--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ nav h3 {
 
 
     .containerone, .containertwo, .containerthree, .containerfour {
+        width: 480px;
         flex-direction: column !important;
     }
 
