--- a/style.css
+++ b/style.css
@@ -382,8 +382,9 @@ footer {
         height: 100px;
         display: flex;
         flex-direction: row;
-        justify-content: flex-end !important;
+        justify-content: space-between !important;
         align-items: center !important;
+        padding: 0 20px;
     }
 
     .topside h1 {
@@ -399,6 +400,10 @@ footer {
     .profile {
         width: 170px;
         height: 170px;
+        float: right !important;
+    }
+
+    .wrap {
         float: right !important;
         margin: 10px;
     }
@@ -424,7 +429,7 @@ footer {
         display: flex !important;
     }
     h2 {
-        font-size: 25px;
+        font-size: 25px !important;
         transform: rotate(0deg) !important;
     }
     .containerone, .containertwo, .containerthree, .containerfour {
