--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ footer {
     display: none;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
+    align-items:center;
     cursor: pointer;
     gap: 5px;
     z-index: 10;
