--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ footer {
         display: none;
         flex-direction: column;
         justify-content: center;
-        top: 30px;
+        top: 70px;
         left: 0;
         width: 100%;
         background: white;
@@ -443,7 +443,7 @@ footer {
 
     .introduction {
         background-image: none !important;
-        margin-top: -200px !important;
+        padding-top: -200px !important;
         width: 90vw !important; /* Takes up 90% of screen width */
         max-width: 90% !important; /* Won’t exceed screen width */
         height: auto; 
