--- a/style.css
+++ b/style.css
@@ -417,7 +417,7 @@ footer {
     .mobilemenu {
         display: none;
         flex-direction: column;
-        justify-content: center;
+        position: absolute;
         top: 70px;
         left: 0;
         width: 100%;
