tried flex end on img but it impacted my menu, trying to figure this out...

--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ footer {
         width: 80px;
         height: 80px;
         display: flex;
-        justify-content: flex-start !important;
+        justify-content: flex-end !important;
     }
 
     .profile {
