--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ footer {
     border-radius: 5px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 630px) {
     header {
         height: 100px;
         display: flex;
@@ -393,14 +393,11 @@ footer {
         margin: 10px;
         width: 80px;
         height: 80px;
-        display: flex;
-        justify-content: flex-end !important;
     }
 
     .profile {
         width: 170px;
         height: 170px;
-        float: right !important;
     }
 
     .wrap {
@@ -410,7 +407,6 @@ footer {
     
     .hamburger {
         display: flex;
-
     }
 
     .mobilemenu {
@@ -419,7 +415,7 @@ footer {
         position: absolute;
         top: 70px;
         left: 0;
-        width: 90%;
+        width: auto;
         background: white;
         text-align: center;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
