--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ footer {
         position: absolute;
         top: 70px;
         left: 0;
-        width: auto;
+        width: 90%;
         background: white;
         text-align: center;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -429,10 +429,10 @@ footer {
         font-size: 25px !important;
         transform: rotate(0deg) !important;
     }
-    /*
+    
     .containerone, .containertwo, .containerthree, .containerfour {
         flex-direction: column !important;
-    }*/
+    }
 
     .wheel {
         display: none;
