--- a/style.css
+++ b/style.css
@@ -391,9 +391,10 @@ footer {
     }
     
     .topside img {
-        margin: 10px;
+        margin: 10px 10px 10px -100px;
         width: 80px;
         height: 80px;
+
     }
 
     .profile {
@@ -408,13 +409,14 @@ footer {
     
     .hamburger {
         display: flex;
+        margin-right: 20px;
     } 
 
     .mobilemenu {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 70px;
+        top: 40px;
         left: 0;
         width: 90%;
         background: white;
