--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ footer {
     border-radius: 5px;
 }
 
-@media (max-width: 630px) {
+@media (max-width: 780px) {
     header {
         height: 100px;
         display: flex;
@@ -407,6 +407,10 @@ footer {
         margin: 10px;
     }
     
+    .containerone p {
+        padding: 0 !important;
+    }
+
     .hamburger {
         display: flex;
         margin-right: 20px;
@@ -431,7 +435,11 @@ footer {
         transform: rotate(0deg) !important;
     }
     
-    .containerone, .containertwo, .containerthree, .containerfour {
+    .containerone {
+        display: block;
+    }
+    
+    .containertwo, .containerthree, .containerfour {
         flex-direction: column !important;
     }
 
