--- a/style.css
+++ b/style.css
@@ -109,10 +109,7 @@ nav h3 {
 }
 
 .introduction {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     background-image: url('Images/cloud.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -122,7 +119,7 @@ nav h3 {
 
 .containerone h4 {
     font-size: 40px;
-    margin: 0;
+    margin-top: 20px;
 }
 
 .containerone p {
@@ -382,7 +379,7 @@ footer {
         height: 100px;
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: space-between;
         align-items: center !important;
     }
 
@@ -391,7 +388,7 @@ footer {
     }
     
     .topside img {
-        margin-right: 200px !important;
+        margin-left: 200px;
         margin-bottom: 40px;
         width: 80px;
         height: 80px;
@@ -400,6 +397,7 @@ footer {
     .profile {
         width: 170px;
         height: 170px;
+        border: 1px solid red;
     }
 
     .wrap {
@@ -408,7 +406,7 @@ footer {
     }
     
     .containerone p {
-        padding: 0 !important;
+        padding: 0 15px !important;
     }
 
     .hamburger {
@@ -436,9 +434,9 @@ footer {
     }
     
     .containerone {
-        display: block;
+        display: block !important;
     }
-    
+
     .containertwo, .containerthree, .containerfour {
         flex-direction: column !important;
     }
@@ -449,10 +447,7 @@ footer {
 
     .introduction {
         background-image: none !important;
-        padding-top: -200px !important;
-        width: 90vw !important; /* Takes up 90% of screen width */
-        max-width: 90% !important; /* Won’t exceed screen width */
-        height: auto; 
+        border: 1px solid red;
     }
 
     .carousel-container {
