fixed width to fit screen size.

--- a/style.css
+++ b/style.css
@@ -447,6 +447,7 @@ footer {
 
     .introduction {
         background-image: none !important;
+        width: 350px;
         border: 1px solid red;
     }
 
