--- a/style.css
+++ b/style.css
@@ -451,6 +451,11 @@ footer {
         border: 1px solid red;
     }
 
+    .introduction h4 {
+        font-size: 15px;
+        margin-bottom: -10px;
+    }
+
     .carousel-container {
         flex-direction: column; /* Stack carousels vertically*/
         margin-top: 20px !important;
