--- a/rmd.css
+++ b/rmd.css
@@ -1,3 +1,21 @@
+/*This what will be displayed once menu clicked*/
+.hamburger {
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    cursor: pointer;
+    gap: 5px;
+    z-index: 10;
+}
+
+.hamburger span {
+    display: block;
+    width: 30px;
+    height: 4px;
+    background: #40242B;
+    border-radius: 5px;
+}
+
 @media (max-width: 780px) {
     header {
         height: 100px;
