--- a/style.css
+++ b/style.css
@@ -312,8 +312,13 @@ input[type="radio"]:checked + label {
     transition: transform 0.3s ease;
 }
 
-.containerfour :first-child ~ div:hover {
+@media (hover: hover) {
+    .containerfour :first-child ~ div {
+        transition: transform 0.3s ease;
+    }
+    .containerfour :first-child ~ div:hover {
         transform: scale(1.2); /* Magnify the content by 10% on hover */
+    }
 }
 
 .containerfour img {
